# c-num-converters

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  README.md  lib_num_converters.c  lib_num_converters.h  library.c  library.h  tests.c
.cache/clangd/index/: Basic.h.958364313D304836.idx  CUError.h.0ED6EBC978A3B9A3.idx  CUnit.h.E1C9F5AC43779630.idx  TestDB.h.FF26C408B3AC0D11.idx  TestRun.h.F5026D5B32F90D94.idx  lib_num_converters.c.3CBDE763BE358F1A.idx  lib_num_converters.h.D0C9FEC0BB805E95.idx  tests.c.63C8D49F534B8EB8.idx
.github/workflows/: cmake.yml
docs/html/: files.html  globals.html  globals_func.html  index.html  library_8c.html  library_8h.html  library_8h_source.html
docs/html/search/: all_0.js  all_1.js  searchdata.js
docs/latex/: files.tex  library_8c.tex  library_8h.tex  library_8h_source.tex  refman.tex
docs/man/man3/: library.c.3  library.h.3
docs/rtf/: refman.rtf
include/: CUnit.h
